Working on dcmLoader

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DicomAnalyser
+application.vendor=pc
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/DicomAnalyser.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.10.jar=/home/pc/netBeansProjects/libraries/commons-codec-1.10.jar
 file.reference.commons-compress-1.9.jar=/home/pc/netBeansProjects/libraries/commons-compress-1.9.jar
 file.reference.commons-net-3.3.jar=/home/pc/netBeansProjects/libraries/commons-net-3.3.jar
 file.reference.jmdns-3.4.1.jar=/home/pc/netBeansProjects/libraries/jmdns-3.4.1.jar
 file.reference.pixelmed.jar=/home/pc/netBeansProjects/libraries/pixelmed.jar
+file.reference.vecmath1.2-1.14.jar=/home/pc/netBeansProjects/libraries/vecmath1.2-1.14.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -39,7 +42,8 @@ javac.classpath=\
     ${file.reference.jmdns-3.4.1.jar}:\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
-    ${file.reference.commons-net-3.3.jar}
+    ${file.reference.commons-net-3.3.jar}:\
+    ${file.reference.vecmath1.2-1.14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,6 +64,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.pixelmed.jar=/home/pc/Downloads/pixelmed
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
