--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.commons-codec-1.10.jar=/home/pc/netBeansProjects/libraries/commons-codec-1.10.jar
 file.reference.commons-compress-1.9.jar=/home/pc/netBeansProjects/libraries/commons-compress-1.9.jar
 file.reference.commons-net-3.3.jar=/home/pc/netBeansProjects/libraries/commons-net-3.3.jar
+file.reference.jai-codec-1.1.3.jar=/home/pc/netBeansProjects/libraries/jai-codec-1.1.3.jar
 file.reference.jmdns-3.4.1.jar=/home/pc/netBeansProjects/libraries/jmdns-3.4.1.jar
 file.reference.pixelmed.jar=/home/pc/netBeansProjects/libraries/pixelmed.jar
 file.reference.vecmath1.2-1.14.jar=/home/pc/netBeansProjects/libraries/vecmath1.2-1.14.jar
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
     ${file.reference.commons-net-3.3.jar}:\
-    ${file.reference.vecmath1.2-1.14.jar}
+    ${file.reference.vecmath1.2-1.14.jar}:\
+    ${file.reference.jai-codec-1.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
